# VITS-AD

./: .gitignore  README.md  environment.yml  pyproject.toml  pytest.ini  requirements-lock.txt  requirements.txt
scripts/: ablation_alpha.py  analyze_exchangeability.py  apply_optimal_ensemble.py  bench_compute.py  build_ucr_canonical.py  collect_ablation_results.py  collect_all_results.py  detect.py  download_msl_smap.py  download_psm.py  download_smd.py  ensemble_improved.py  ensemble_multiscale.py  ensemble_scores.py  generate_paper_figures.py  generate_pipeline_figure.py  make_regime_figure.py  optimize_ensemble_weights.py  per_patch_ablation_standalone.py  per_patch_scorer_ablation.py  pilot_perpatch.py  posthoc_alpha_ensemble.py  posthoc_per_entity_alpha.py  prepare_catch_data.py  redetect_smd_smooth21.sh  regenerate_paper_tables.py  regime_map.py  render_dataset.py  reproduce_paper.sh  run_ablation.sh  run_all_baselines.sh  run_at_baseline.py  run_benchmark.sh  run_calibguard_improved.py  run_calibguard_v2.py  run_calibguard_v3.py  run_catch_all.sh  run_catch_baseline.py  run_classic_baselines.py  run_classical_baselines.py  (+36 more)
tests/: test_backbone.py  test_base.py  test_calibguard.py  test_calibguard_v3.py  test_channel_group.py  test_correspondence.py  test_correspondence_ot.py  test_dual_signal.py  test_e2e_pipeline.py  test_ensemble_backbone.py  test_gaf_rp.py  test_metrics.py  test_multiscale_ensemble.py  test_patchtraj.py  test_patchtraj_scorer.py  test_perpatch_scorer.py  test_rendering.py  test_score_fusion.py  test_smoke_e2e.py  test_smooth_scores.py  (+2 more)
(+38 files in other folders)
